	  handles the architecture independent part of _exit().  _exit()
	  is used internally, but if it is called from the user, it should
	  unregister any atexit() or on_exit() functions (2013-4-18).
	* tools/kconfig2html.c: This is the beginning of a tool to
	  replace the hand-generated documentation of the NuttX configruation
	  variables with auto-generated documentation.  The initial checkin
	  is an incomplete, poorly structured prototype that I hope to
	  evolve into a useful tool (2014-4-20).
	* libc/string/lib_strchr.c:  strchr(str, '\0') should return a
	  pointer to the end of the string, not NULL.  From Petteri
	  Aimonen (2014-4-22).
	* fs/fat/fs_writefat.c: mkfatfs was writing the boot code to the
	  wrong location.  From Petteri Aimonen (2014-4-22).
	* Documentation:  The NuttX documentation now expects to find an
	  auto-generated version of the configuration variable documentation
	  at Documentation/NuttXConfigVariables.html (2014-4-22).
	* arch/arm/src/lpc17xx/lpc17_adc.c:  Only one ADC pin was configured.
	  Need to configure all that are in the ADC0 set.  From MKannan
	  (2014-4-23).
	* configs/zkit-arm-1769/src:  ADC and SPI/USB MSC updates from
	  MKannan (2014-4-23).
	* arm/src/armv7-m/ram_vectors.h and arm/src/armv7-m/up_ramvec_initialize.c:
	  Fixes to RAM vector logic from Paul Y. Zhang (2014-4-23)
	* tools/kconfig2html.c:  Improve behavior of Expand/Collapse
	  Table of Contents; Handle errors in parsing of strings and in
	  some uninitialized variables.  Add an option to use jQuery.
	* tools/mkconfigvar.sh: Fix make target (2014-4-23).
	* sched/exit.c, pthread_exit.c, task_exit.c, task_delete,c and
	  task_exithook.c:  For pthread_exit(), move some logic to an early
	  point in the exit sequence where the task may need to block.  Add
	  conditional logic in the lower end of the eixt logic kicked off by
	  _exit() to prohibit blocking after the task has been torn down and is
	  no longer cabable of blocking (2014-4-23).